# prototype-backend

./: .gitignore  Dockerfile  README.md  docker-compose.yml  example.env  food_vector.json  mkdocs.yml  pyproject.toml  requirements.txt  temp.md  temp.txt
docs/: about.md  advice-chain-reference.md  cli.md  diet-plan-chain-reference.md  getting_started.md  index.md  nutrition-agent-reference.md  nutrition-feature-logic.md  nutrition-tools-reference.md  nutrition-vector-ops-reference.md  todo.md  util-functions-reference.md  utils-models-reference.md  utils.md
healthfirstai_prototype/: advice_agent.py  advice_chains.py  advice_prompts.py  advice_tools.py  api.py  application.py  benchmark.py  chat_agent.py  chat_agent_experimental.py  cli.py  data_models.py  database.py  datatypes.py  exercise_agent.py  exercise_logic.py  exercise_tools.py  generate.py  main.py  my_types.py  nutrition_agent.py  nutrition_agent_tools.py  nutrition_chains.py  nutrition_logic.py  nutrition_templates.py  nutrition_tool_models.py  nutrition_tool_service.py  nutrition_tools.py  nutrition_utils.py  nutrition_vector_ops.py  plan_and_execute.py  query.py  redis_db.py  templates.py  transform.py  util_funcs.py  util_models.py  utils.py
healthfirstai_prototype/agents/: chat_agent.py  chat_agent_experimental.py  exercise_agent.py  prompts.py  schemas.py  utils.py
healthfirstai_prototype/controller/: pg_vector_db.py
healthfirstai_prototype/db/: 01-country.sql  05-base_weekly_meal_plan.sql  06-base_daily_meal_plan.sql  11-meal.sql  16-custom_daily_meal_plan_and_meal.sql  17-custom_weekly_meal_plan_and_custom_daily_meal_plan.sql  19-exercise_init.sql  20-seeder.sql
healthfirstai_prototype/enums/: exercise_enums.py  meal_enums.py  openai_enums.py
healthfirstai_prototype/exercise_files/: exercise_agent.py  exercise_logic.py  exercise_templates.py
healthfirstai_prototype/init_db/: init.sql  insert_default_daily_plan.sql  insert_meal_plan.sql  mysql_init.sql  nutrition_vector.sql  seeder.sql  test_queries.sql  user_init.sql
healthfirstai_prototype/json/: meal_plan.json
healthfirstai_prototype/models/: data_models.py  database.py  exercise_data_models.py  exercise_init.py  new_data_models.py
healthfirstai_prototype/sql-scripts/: 02-city.sql  03-user.sql  04-goals.sql  07-custom_weekly_meal_plan.sql  08-custom_daily_meal_plan.sql  09-personalized_daily_meal_plan.sql  10-personalized_weekly_meal_plan.sql  11-meal.sql  12-unit_of_measurement.sql  13-meal_ingredient.sql  14-daily_meal_plan_and_meal.sql  15-weekly_meal_plan_and_daily_meal_plan.sql  exercise_init.py  exercise_init.sql
healthfirstai_prototype/streamlit_frontend/: 0_🏠_Home.py
healthfirstai_prototype/views/: 0_🏠_Home.py
notebooks/: chromadb.ipynb  chromadb2.ipynb  classification.ipynb  cohere_agent.ipynb  cohere_chat.ipynb  document_loaders.ipynb  insert_postgres.ipynb  pinecone.ipynb  serpAPI_chat.ipynb
resources/: agent_notes.md  db_notes.md  default_diet.json  example_diet.json  example_schedule.json  example_today_workout_schedule.json  training.csv  user_schedule.json
supabase/: config.toml
tests/: test_advice_utils.py  test_diet_plan_utils.py  test_endpoints.py  test_exercise_utils.py
vector_store/: index.faiss  index.pkl
(+41 files in other folders)
