[tool.poetry]
name = "healthfirstai-prototype"
version = "0.1.0"
description = ""
authors = ["Lawrence Lim <ll4715@nyu.edu>"]
readme = "README.md"
packages = [{include = "healthfirstai_prototype"}]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.220"
cohere = "^4.11.2"
pytest = "^7.4.0"
openai = "^0.27.8"
unstructured = "^0.7.12"
pypdf2 = "^3.0.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.3"
selenium = "^4.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
